--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
+server.servlet.context-path=/api
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.security.user.name=user
+spring.security.user.password=123
